--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -23,6 +23,9 @@
                 <a href="/devices" class="text-gray-600 dark:text-gray-300 hover:text-green-600 dark:hover:text-green-400 px-3 py-2 rounded-md text-sm font-medium transition-colors">
                     <i class="fas fa-microchip mr-1"></i> Dispositivos
                 </a>
+                <a href="/calendar" class="text-gray-600 dark:text-gray-300 hover:text-green-600 dark:hover:text-green-400 px-3 py-2 rounded-md text-sm font-medium transition-colors">
+                    <i class="fas fa-calendar-alt mr-1"></i> Calendario
+                </a>
                 
                 {{#if user}}
                     {{#if (eq user.rol 'admin')}}
