--- a/src/views/partials/layout.hbs
+++ b/src/views/partials/layout.hbs
@@ -6,6 +6,7 @@
     <title>{{#if title}}{{title}}{{else}}Sistema de Riego Arduino IoT{{/if}}</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
     {{{body}}}
